# VisualAssist

./: .gitattributes  .gitignore  ARCHITECTURE_SUMMARY.md  DEPLOYMENT.md  DEPLOYMENT_STATUS.md  DOCKER-COMPLETE.md  Dockerfile  NAVIGATION_TEST_GUIDE.md  PROJECT_STRUCTURE.md  QUICK_START.md  RAILWAY_DEPLOYMENT.md  RAILWAY_SETUP.md  README.md  TASK_10_1_INTEGRATION_COMPLETE.md  build-complete.bat  build-complete.sh  config.js  config.json  docker-compose.complete.yml  docker-compose.yml  launch.bat  pyproject.toml  railway.json  run-complete.bat  run-complete.sh  run-with-client-frontend.bat  run-with-client-frontend.sh  setup.py  start-dev.bat  start-quick.bat  start.bat  stop.bat  test-video-stream.html  test_setup.py  webrtc-test.html
.github/workflows/: deploy-backend.yml  deploy.yml  railway-deploy.yml
.kiro/specs/ai-navigation-assistant/: design.md  requirements.md  tasks.md
backend/: .env.example  DOCKER.md  Dockerfile  Dockerfile.simple  __init__.py  build-docker.bat  build-docker.sh  computer_vision.py  config_manager.py  diagnose_startup.py  docker-compose.yml  entrypoint.py  integration_test.py  logging_config.py  main.py  monitoring.py  navigation_feed.py  navigation_fsm.py  requirements.txt  run-docker.bat  run-docker.sh  safety_monitor.py  service_manager.py  speech_recognition.py  startup_check.py  webrtc_handler.py  websocket_manager.py  workflow_coordinator.py
client/: 404.html  50x.html  client-styles.css  client.js  config.js  debug-client.html  fix-navigation.js  index.html  package.json  test-auto-connect.html  test-frame-rate-limiting.html  test-stream-first.html
docker/: nginx.conf  start.sh  updated-nginx.conf
frontend/: app.js  config.js  debug-app.html  debug.html  index.html  package.json  server.js  simple-test.html  simple_server.py  styles.css  websocket-test.html
scripts/: configure_localhost.ps1  deploy-setup.bat  disable_proxy.bat  force_stop.bat  health_check.py  setup.py  simple_server.py  start.bat  start.sh  start_development.py  start_no_proxy.bat  start_production.py  stop.bat  stop.ps1  stop_by_pid.bat
