[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-navigation-assistant"
version = "1.0.0"
description = "Real-time AI-powered navigation assistance with object detection and path guidance"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "AI Navigation Team"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Video :: Capture",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
]
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "websockets>=11.0",
    "opencv-python>=4.8.0",
    "ultralytics>=8.0.0",
    "vosk>=0.3.40",
    "python-multipart>=0.0.6",
    "aiortc>=1.5.0",
    "numpy>=1.24.0",
    "Pillow>=10.0.0",
    "setuptools>=65.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
]

[project.urls]
Homepage = "https://github.com/yourusername/ai-navigation-assistant"
Repository = "https://github.com/yourusername/ai-navigation-assistant"
Issues = "https://github.com/yourusername/ai-navigation-assistant/issues"
Documentation = "https://github.com/yourusername/ai-navigation-assistant#readme"

[project.scripts]
ai-navigation-backend = "backend.main:main"

[tool.setuptools]
packages = ["backend"]

[tool.setuptools.package-data]
backend = ["*.pt", "models/*"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]